# ccore

./: .gitignore  CMakeLists.txt  README.md  ccore.c  ccore.h  main  main.c  mem.c  mem.h  test  vmem.h
example/: buddy.c  main.c  pool.c
